--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,10 @@
     ],
     "files": [
       "./components/pagination/pagination.ts",
+      "./components/clusterize/clusterize.ts",
       "./components/table/table.ts",
       "./components/table/filtering.ts",
+      "./components/table/sorting.ts",
       "./components/table/table-config.ts",
       "./components/index.ts",
       "./components/module.ts",
